Add date sorting + Readable size function

--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -1628,18 +1628,7 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QComboBox" name="sortCombo">
-                   <item>
-                    <property name="text">
-                     <string>Name</string>
-                    </property>
-                   </item>
-                   <item>
-                    <property name="text">
-                     <string>Size</string>
-                    </property>
-                   </item>
-                  </widget>
+                  <widget class="QComboBox" name="sortCombo"/>
                  </item>
                 </layout>
                </item>
